<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/background" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">


        <TextView
            android:id="@+id/pointsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/points"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/points"

            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ditanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/location"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/currentlocation"

            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/longitude"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/longitude2"

            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/latitude1"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/latitude"

            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:layout_weight="1">

        <Button
            android:id="@+id/checkButton"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#c50e08"
            android:fontFamily="monospace"
            android:onClick="onCheckButton"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/check_location"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/location1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/location1"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/location2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/location2"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/location3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/location3"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/location4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/location4"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

</LinearLayout>